fix: disable postgres/redis ExternalName Service in prod
   - postgres.external.enabled: false
   - redis.external.enabled: false
   - 서비스들이 DB_HOST/REDIS_HOST 환경변수로 직접 RDS/ElastiCache 연결
   - ExternalName Service 불필요

   트러블슈팅 문서 업데이트:
   - Google OAuth HTTPRoute 경로 누락 해결
   - Cluster Autoscaler clusterName 불일치 해결
   - Node Group 크기 조정 (min: 3, max: 6)

--- a/k8s/helm/environments/prod.yaml
+++ b/k8s/helm/environments/prod.yaml
@@ -221,16 +221,12 @@ ingress:
 postgres:
   enabled: false   # 내부 PostgreSQL 비활성화
   external:
-    enabled: true  # AWS RDS 사용
-    port: 5432
-    # host: ExternalSecret (wealist-shared-secret.DB_HOST)
+    enabled: false  # ExternalName Service 불필요 (서비스가 DB_HOST 환경변수로 직접 연결)
 
 redis:
   enabled: false   # 내부 Redis 비활성화
   external:
-    enabled: true  # AWS ElastiCache 사용
-    port: 6379
-    # host: ExternalSecret (wealist-shared-secret.REDIS_HOST)
+    enabled: false  # ExternalName Service 불필요 (서비스가 REDIS_HOST 환경변수로 직접 연결)
 
 minio:
   enabled: false   # S3 사용 (AWS)
