feat(argocd): use separate OAuth secret for ArgoCD SSO
   - Change ExternalSecret to use wealist/prod/oauth/argocd (separate from app's oauth/google)
   - Add ArgoCD OAuth secret in Terraform foundation/secrets.tf

--- a/k8s/argocd/base/external-secrets/argocd-oauth-secret.yaml
+++ b/k8s/argocd/base/external-secrets/argocd-oauth-secret.yaml
@@ -5,7 +5,7 @@
 # Dex는 $dex.google.clientID 형식으로 이 Secret의 값을 자동 참조
 #
 # AWS Secrets Manager에 저장:
-#   wealist/prod/oauth/google:
+#   wealist/prod/oauth/argocd:  (ArgoCD 전용, 앱용 google과 별도)
 #     client_id: "xxx.apps.googleusercontent.com"
 #     client_secret: "GOCSPX-xxx"
 #
@@ -31,10 +31,10 @@ spec:
     # Dex가 $dex.google.clientID 형식으로 참조
     - secretKey: dex.google.clientID
       remoteRef:
-        key: "wealist/prod/oauth/google"
+        key: "wealist/prod/oauth/argocd"
         property: client_id
 
     - secretKey: dex.google.clientSecret
       remoteRef:
-        key: "wealist/prod/oauth/google"
+        key: "wealist/prod/oauth/argocd"
         property: client_secret
