--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -196,44 +196,25 @@ jobs:
           echo "services=${SERVICES}" >> $GITHUB_OUTPUT
 
   # -------------------------------------------------------------------------
-  # Stage 1: 플랫폼별 네이티브 빌드 (QEMU 없이 빠른 빌드)
+  # 이미지 빌드 및 ECR 푸시 (amd64 only)
   # -------------------------------------------------------------------------
-  build-platform:
+  build-and-push:
     needs: [validate-branch, detect-changes]
     if: ${{ needs.validate-branch.outputs.should_run == 'true' && needs.detect-changes.outputs.services != '[]' && needs.detect-changes.outputs.services != '' }}
+    runs-on: ubuntu-latest
     environment: ${{ needs.detect-changes.outputs.environment }}
 
     strategy:
       matrix:
         service: ${{ fromJSON(needs.detect-changes.outputs.services) }}
-        platform:
-          - linux/amd64
-          - linux/arm64
-        include:
-          - platform: linux/amd64
-            runner: ubuntu-latest
-          - platform: linux/arm64
-            runner: ubuntu-24.04-arm
       fail-fast: false
-
-    runs-on: ${{ matrix.runner }}
 
     permissions:
       id-token: write
       contents: read
 
-    outputs:
-      image_uri: ${{ steps.tags.outputs.image_uri }}
-      tag: ${{ steps.tags.outputs.tag }}
-
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set platform pair
-        id: platform
-        run: |
-          platform=${{ matrix.platform }}
-          echo "pair=${platform//\//-}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -298,6 +279,7 @@ jobs:
         run: |
           SHORT_SHA="${{ github.sha }}"
           SHORT_SHA=${SHORT_SHA:0:7}
+          ENV="${{ needs.detect-changes.outputs.environment }}"
           BUILD_NUMBER="${{ github.run_number }}"
           ECR_REGISTRY="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
           REPO_NAME="${{ steps.ecr-repo.outputs.name }}"
@@ -305,127 +287,25 @@ jobs:
 
           echo "tag=${TAG}" >> $GITHUB_OUTPUT
           echo "image_uri=${ECR_REGISTRY}/${REPO_NAME}" >> $GITHUB_OUTPUT
-          echo "digest_tag=${TAG}-${{ steps.platform.outputs.pair }}" >> $GITHUB_OUTPUT
 
-      - name: Build and push by digest
-        id: build
+          # prod는 IMMUTABLE이므로 latest 태그 불가
+          if [ "${ENV}" = "prod" ]; then
+            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG}"
+          else
+            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG},${ECR_REGISTRY}/${REPO_NAME}:latest"
+          fi
+          echo "all_tags=${TAGS}" >> $GITHUB_OUTPUT
+
+      - name: Build and push ${{ matrix.service }}
         uses: docker/build-push-action@v5
         with:
           context: ${{ steps.build-config.outputs.context }}
           file: ${{ steps.build-config.outputs.dockerfile }}
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64
           push: true
-          tags: ${{ steps.tags.outputs.image_uri }}:${{ steps.tags.outputs.digest_tag }}
-          cache-from: type=gha,scope=${{ matrix.service }}-${{ steps.platform.outputs.pair }}-${{ needs.detect-changes.outputs.environment }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service }}-${{ steps.platform.outputs.pair }}-${{ needs.detect-changes.outputs.environment }}
-          provenance: false
-
-      - name: Export digest
-        run: |
-          mkdir -p /tmp/digests/${{ matrix.service }}
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${{ matrix.service }}/${digest#sha256:}"
-
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ matrix.service }}-${{ steps.platform.outputs.pair }}
-          path: /tmp/digests/${{ matrix.service }}/*
-          if-no-files-found: error
-          retention-days: 1
-
-  # -------------------------------------------------------------------------
-  # Stage 2: 멀티 아키텍처 매니페스트 병합
-  # -------------------------------------------------------------------------
-  merge-manifests:
-    needs: [validate-branch, detect-changes, build-platform]
-    if: ${{ needs.validate-branch.outputs.should_run == 'true' && needs.detect-changes.outputs.services != '[]' }}
-    runs-on: ubuntu-latest
-    environment: ${{ needs.detect-changes.outputs.environment }}
-
-    strategy:
-      matrix:
-        service: ${{ fromJSON(needs.detect-changes.outputs.services) }}
-      fail-fast: false
-
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          pattern: digests-${{ matrix.service }}-*
-          path: /tmp/digests/${{ matrix.service }}
-          merge-multiple: true
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_BACKEND }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Set variables
-        id: vars
-        run: |
-          ENV="${{ needs.detect-changes.outputs.environment }}"
-          SERVICE="${{ matrix.service }}"
-          SHORT_SHA="${{ github.sha }}"
-          SHORT_SHA=${SHORT_SHA:0:7}
-          BUILD_NUMBER="${{ github.run_number }}"
-          ECR_REGISTRY="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
-
-          if [ "${ENV}" = "prod" ]; then
-            REPO_NAME="prod/${SERVICE}"
-          else
-            REPO_NAME="${SERVICE}"
-          fi
-
-          TAG="${BUILD_NUMBER}-${SHORT_SHA}"
-          IMAGE_URI="${ECR_REGISTRY}/${REPO_NAME}"
-
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
-          echo "image_uri=${IMAGE_URI}" >> $GITHUB_OUTPUT
-          echo "is_prod=$([[ '${ENV}' == 'prod' ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-
-      - name: Create manifest list and push
-        working-directory: /tmp/digests/${{ matrix.service }}
-        run: |
-          IMAGE_URI="${{ steps.vars.outputs.image_uri }}"
-          TAG="${{ steps.vars.outputs.tag }}"
-          ENV="${{ needs.detect-changes.outputs.environment }}"
-
-          # 멀티 아키텍처 매니페스트 생성
-          docker buildx imagetools create \
-            -t ${IMAGE_URI}:${TAG} \
-            $(printf "${IMAGE_URI}:${TAG}-%s " linux-amd64 linux-arm64)
-
-          # dev 환경에서는 latest 태그도 추가
-          if [ "${ENV}" != "prod" ]; then
-            docker buildx imagetools create \
-              -t ${IMAGE_URI}:latest \
-              $(printf "${IMAGE_URI}:${TAG}-%s " linux-amd64 linux-arm64)
-          fi
-
-      - name: Cleanup platform-specific tags
-        run: |
-          IMAGE_URI="${{ steps.vars.outputs.image_uri }}"
-          TAG="${{ steps.vars.outputs.tag }}"
-
-          # 임시 플랫폼별 태그 삭제 (선택적)
-          for platform in linux-amd64 linux-arm64; do
-            aws ecr batch-delete-image \
-              --repository-name $(echo ${IMAGE_URI} | cut -d'/' -f2-) \
-              --image-ids imageTag=${TAG}-${platform} 2>/dev/null || true
-          done
+          tags: ${{ steps.tags.outputs.all_tags }}
+          cache-from: type=gha,scope=${{ matrix.service }}-${{ needs.detect-changes.outputs.environment }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service }}-${{ needs.detect-changes.outputs.environment }}
 
       - name: Output image info
         run: |
@@ -433,15 +313,16 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Service:** ${{ matrix.service }}" >> $GITHUB_STEP_SUMMARY
           echo "**Environment:** ${{ needs.detect-changes.outputs.environment }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Image URI:** ${{ steps.vars.outputs.image_uri }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Tag:** ${{ steps.vars.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Platforms:** linux/amd64 (native), linux/arm64 (native)" >> $GITHUB_STEP_SUMMARY
+          echo "**ECR Repository:** ${{ steps.ecr-repo.outputs.name }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Image URI:** ${{ steps.tags.outputs.image_uri }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Tag:** ${{ steps.tags.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Platform:** linux/amd64" >> $GITHUB_STEP_SUMMARY
 
   # -------------------------------------------------------------------------
   # 빌드 완료 Discord 알림
   # -------------------------------------------------------------------------
   notify-build-complete:
-    needs: [detect-changes, merge-manifests]
+    needs: [detect-changes, build-and-push]
     if: always() && needs.detect-changes.outputs.services != '[]' && needs.detect-changes.outputs.services != ''
     runs-on: ubuntu-latest
 
@@ -458,7 +339,7 @@ jobs:
           echo "short_sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
 
       - name: Send Discord notification on success
-        if: needs.merge-manifests.result == 'success'
+        if: needs.build-and-push.result == 'success'
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_BUILD }}
         run: |
@@ -515,7 +396,7 @@ jobs:
           fi
 
       - name: Send Discord notification on failure
-        if: needs.merge-manifests.result == 'failure'
+        if: needs.build-and-push.result == 'failure'
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_BUILD }}
         run: |
@@ -562,7 +443,7 @@ jobs:
           fi
 
   update-gitops-manifests:
-    needs: [validate-branch, detect-changes, merge-manifests]
+    needs: [validate-branch, detect-changes, build-and-push]
     # TODO: prod 매니페스트 업데이트 임시 활성화 - 원복 시 아래 주석 해제
     # needs.detect-changes.outputs.branch != 'service-deploy-prod' &&
     if: |
