refactor: 서비스별 config를 ArgoCD parameters로 통합
  - prod.yaml에서 서비스별 config 섹션 제거 (Helm에 전달되지 않음)
  - ArgoCD Application parameters에서 모든 서비스별 config 관리
  - storage-service: SERVER_BASE_PATH 파라미터 추가 (HTTPRoute 호환)
  - CLAUDE.md: Important Notes #20 추가

--- a/k8s/argocd/apps/prod/noti-service.yaml
+++ b/k8s/argocd/apps/prod/noti-service.yaml
@@ -30,6 +30,7 @@ spec:
           value: "67-84bad8f"
         - name: externalSecrets.enabled
           value: "true"
+        # Service-specific config (managed here, not in prod.yaml)
         - name: config.DB_NAME
           value: "noti_db"
   destination:
