--- a/k8s/argocd/apps/prod/auth-service.yaml
+++ b/k8s/argocd/apps/prod/auth-service.yaml
@@ -30,8 +30,9 @@ spec:
           value: "67-84bad8f"
         - name: externalSecrets.enabled
           value: "true"
+        # Service-specific config (managed here, not in prod.yaml)
         - name: config.SPRING_DATA_REDIS_SSL_ENABLED
-          value: "true"
+          value: "true"  # ElastiCache TLS
   destination:
     server: https://kubernetes.default.svc
     namespace: wealist-prod
