--- a/k8s/argocd/apps/prod/storage-service.yaml
+++ b/k8s/argocd/apps/prod/storage-service.yaml
@@ -30,8 +30,11 @@ spec:
           value: "67-84bad8f"
         - name: externalSecrets.enabled
           value: "true"
+        # Service-specific config (managed here, not in prod.yaml)
         - name: config.DB_NAME
           value: "storage_db"
+        - name: config.SERVER_BASE_PATH
+          value: ""  # Istio HTTPRoute 리라이트 호환 (/api/svc/storage → /)
   destination:
     server: https://kubernetes.default.svc
     namespace: wealist-prod
